force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/cgc_sync__Sync_Mobile_App_Component__c.object-meta.xml
<CustomObject>
    <description>Settings for different themeable UI Components</description>
    <label>Mobile App Theme Component</label>
    <nameField>
        <label>Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile App Theme Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>