force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/fields/cgc_sync__Color__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Color__c</fullName>
    <description>Refers to the color code which used in the mobile app. This can be a color code macro or an RGBA code.</description>
    <label>Color</label>
    <length>89</length>
    <type>Text</type>
</CustomField>