force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/fields/cgc_sync__Description__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Description__c</fullName>
    <description>Descibes the property __property_name__c</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>