force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/fields/cgc_sync__Property_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Property_Name__c</fullName>
    <description>Unique names for mobile app framework controls to adjust the color based on themes.</description>
    <label>Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>