force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/fields/cgc_sync__Property_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
                <default>true</default>
                <label>Color</label>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>