force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/fields/cgc_sync__Sync_Mobile_App_Theme__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Mobile_App_Theme__c</fullName>
    <description>Theme reference.</description>
    <label>Mobility Theme</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_Theme__c</referenceTo>
    <relationshipLabel>Mobile App Theme</relationshipLabel>
    <relationshipName>Sync_Mobile_App_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>