force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/validationRules/cgc_sync__isValidColorOrMacro.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__isValidColorOrMacro</fullName>
    <active>true</active>
    <description>Checks if value is a value macro string or a valid RGBA color code</description>
    <errorConditionFormula>and (!REGEX( cgc_sync__Color__c , &apos;^rgba?\\((1?[0-9]{1,2}|2[0-4][0-9]|25[0-5]),\\s*(1?[0-9]{1,2}|2[0-4][0-9]|25[0-5]),\\s*(1?[0-9]{1,2}|2[0-4][0-9]|25[0-5]),\\s*(1?(0[.][0-9]{1,3})|[01])\\)&apos;) ,!REGEX(cgc_sync__Color__c, &apos;(^#[0-9a-zA-Z]{1,80}(\\(((0[.][0-9]{1,3})|[01])\\))?#$)&apos;),  !ISBLANK( cgc_sync__Property_Name__c ) )</errorConditionFormula>
    <errorMessage>This is not a valid RGBA string or a valid color macro.</errorMessage>
</ValidationRule>