force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/validationRules/cgc_sync__isValidName.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__isValidName</fullName>
    <active>true</active>
    <description>Check is given name is valid</description>
    <errorConditionFormula>!REGEX(Name, &apos;[a-zA-Z0-9]{1,80}|&apos;)</errorConditionFormula>
    <errorMessage>Only characters and numbers are allowed as name</errorMessage>
</ValidationRule>