force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Component__c/validationRules/cgc_sync__Prevent_Empty_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Prevent_Empty_Name</fullName>
    <active>true</active>
    <description>Do not allow creation of component without name.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Please provide Object Name.</errorMessage>
</ValidationRule>